opam-version: "2.0"
name: "llvmutils"
version: "0.1"
synopsis: "Utilities for LLVM APIs"
maintainer: "Programming Systems Laboratory, KAIST"
authors: "Programming Systems Laboratory, KAIST"
homepage: "https://github.com/prosyslab-classroom/llvm-utils"
bug-reports: "https://github.com/prosyslab-classroom/llvm-utils"
license: "BSD"
dev-repo: "git+https://github.com/prosyslab-classroom/llvm-utils.git"
build: [["dune" "build" "-p" name "-j" jobs "@install" "@doc"]]
depends: [
  "ocaml" {>="4.08.0"}
]
