opam-version: "2.0"
name: "llvmutils"
version: "0.1"
synopsis: "Utilities for LLVM APIs"
maintainer: "Programming Systems Laboratory, KAIST"
authors: "Programming Systems Laboratory, KAIST"
homepage: "https://github.com/prosyslab-classroom/llvmutils"
bug-reports: "https://github.com/prosyslab-classroom/llvmutils"
license: "BSD"
dev-repo: "git+https://github.com/prosyslab-classroom/llvmutils.git"
build: [["dune" "build" "-p" name "-j" jobs "@install" "@doc"]]
depends: [
  "ocaml" {>="5.1.0"}
  "llvm" {= "15.0.7+nnp-3"}
]
